--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.jpa.show-sql=true
 spring.datasource.hikari.auto-commit=false
 spring.jpa.open-in-view=true
 
+logging.logback.rollingpolicy.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+
+server.port=8081
